[package]
name = "leetcode_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
